src/objects/OrderConfLine__c.object
<CustomObject>
    <fields>
        <fullName>Duration__c</fullName>
        <label>Duration</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProductServiceCategory__c</fullName>
        <label>ProductServiceCategory</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Description__c</fullName>
        <label>Product Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <label>Product Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Qty__c</fullName>
        <label>Qty</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quote__c</fullName>
        <label>Quote</label>
        <referenceTo>zqu__Quote__c</referenceTo>
        <relationshipLabel>OrderConfLines</relationshipLabel>
        <relationshipName>OrderConfLines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SKU__c</fullName>
        <label>SKU</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscription_Period__c</fullName>
        <label>Subscription Period</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UOM__c</fullName>
        <label>UOM</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <description>Order confirmation lines for fulfillment email</description>
    <label>OrderConfLine</label>
    <nameField>
        <displayFormat>OCL-{000000}</displayFormat>
        <label>OCLine Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>OrderConfLines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>